exports[`should build simple theme 1`] = `
/
├─ out/
│  ├─ index.css
│  ├─ index.d.ts
│  ├─ index.js
│  ├─ metadata.d.mts
│  ├─ metadata.mjs
│  ├─ palette.json
│  └─ palette.json.d.ts
└─ src/
   ├─ _version.scss
   └─ index.scss
`;

exports[`should build simple theme 2`] = `
:root{
  --x-foobar:#f0a;
}
`;

exports[`should build simple theme 3`] = `
const value = {
  "--x-foobar": "#f0a"
};
module.exports = value;
`;

exports[`should build simple theme 4`] = `
declare const value: Record<string, string>;
export = value;
`;

exports[`should build simple theme 5`] = `
[]
`;

exports[`should build simple theme 6`] = `
export default {
  "tokens": [
    {
      "name": "--x-foobar",
      "value": "#f0a",
      "palette": null,
      "comment": null
    }
  ]
}
`;

exports[`should build simple theme 7`] = `

export interface Token {
    readonly name: string;
    readonly value: string;
    readonly palette: string | null;
    readonly comment: string | null;
}

export interface Metadata {
    readonly tokens: Token[];
}

declare const metadata: Metadata;
export default metadata;

`;

exports[`should generate version 1`] = `
/
├─ out/
│  ├─ index.css
│  ├─ index.d.ts
│  ├─ index.js
│  ├─ metadata.d.mts
│  ├─ metadata.mjs
│  ├─ palette.json
│  └─ palette.json.d.ts
└─ src/
   ├─ _version.scss
   └─ index.scss
`;

exports[`should generate version 2`] = `
:root{
  --x-foobar:#f0a;
  --version:"1.2.3";
}
`;

exports[`should generate version 3`] = `
const value = {
  "--x-foobar": "#f0a",
  "--version": "\\"1.2.3\\""
};
module.exports = value;
`;

exports[`should include deprecated variables 1`] = `
/
├─ out/
│  ├─ deprecated-variables.json
│  ├─ palette.json
│  └─ palette.json.d.ts
└─ src/
   ├─ _version.scss
   └─ deprecated-variables.json
`;

exports[`should include palette 1`] = `
/
├─ out/
│  ├─ index.css
│  ├─ index.d.ts
│  ├─ index.js
│  ├─ metadata.d.mts
│  ├─ metadata.mjs
│  ├─ palette.json
│  └─ palette.json.d.ts
└─ src/
   ├─ _version.scss
   ├─ index.scss
   └─ palette-variables.scss
`;
